fix: add gap through the page

--- a/assets/css/custom__fonts.css
+++ b/assets/css/custom__fonts.css
@@ -20,3 +20,9 @@
     box-sizing: border-box;
     font-family: var(--primary--font);
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
